Fixed pagination to work well
