# src/sales/controller/api-sales.controller.ts
@@ -43,12 +43,18 @@ export class ApiSalesController {
   })
   async listSales(
     @Query('merchantId') merchantId: string,
-    @Query('cursor') cursor?: string,
+    @Query('before') before?: string,
+    @Query('after') after?: string,
+    @Query('startDate') startDate?: string,
+    @Query('endDate') endDate?: string,
     @Query('pageSize') pageSize?: string,
   ): Promise<SalesReportListResponseDto> {
     return this.salesService.listNormalizedSaleReports({
       merchantId,
-      cursor,
+      startDate,
+      endDate,
+      before,
+      after,
       pageSize: pageSize ? Number(pageSize) : undefined,
     });
   }
